change name api

--- a/api/contructions/models/contructions.settings.json
+++ b/api/contructions/models/contructions.settings.json
@@ -2,7 +2,7 @@
   "kind": "collectionType",
   "collectionName": "contructions",
   "info": {
-    "name": "contructions",
+    "name": "tin-cong-trinh",
     "description": ""
   },
   "options": {
