--- a/api/rolling-door-quotes/models/rolling-door-quotes.settings.json
+++ b/api/rolling-door-quotes/models/rolling-door-quotes.settings.json
@@ -2,7 +2,7 @@
   "kind": "collectionType",
   "collectionName": "rolling",
   "info": {
-    "name": "rolling-door-quotes",
+    "name": "bao-gia-cua-cuon",
     "description": ""
   },
   "options": {
