--- a/api/aluminum-door-quotes/models/aluminum-door-quotes.settings.json
+++ b/api/aluminum-door-quotes/models/aluminum-door-quotes.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "aluminum",
   "info": {
-    "name": "aluminum-door-quotes"
+    "name": "bao-gia-cua-nhom",
+    "description": ""
   },
   "options": {
     "increments": true,
