--- a/api/glass-door-quotes/models/glass-door-quotes.settings.json
+++ b/api/glass-door-quotes/models/glass-door-quotes.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "glass",
   "info": {
-    "name": "glass-door-quotes"
+    "name": "bao-gia-cua-kinh",
+    "description": ""
   },
   "options": {
     "increments": true,
