--- a/api/knowledge/models/knowledge.settings.json
+++ b/api/knowledge/models/knowledge.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "knowledges",
   "info": {
-    "name": "knowledge"
+    "name": "kien-thuc-chuyen-mon",
+    "description": ""
   },
   "options": {
     "increments": true,
